[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.9.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sajattack/st7735-lcd-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "0.1"
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nightly",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "nightly",
    "defmt-timestamp-uptime",
] }
defmt = "0.3.5"

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
